t5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    AND_EQUALS
    ARROW
    BREAK
    CONTINUE
    DECREMENT
    DIV_EQUALS
    DOT
    ELSE
    EQ
    GE
    GT
    INCREMENT
    LE
    LT
    MINUS_EQUALS
    MOD_EQUALS
    NE
    NOT
    OR
    OR_EQUALS
    PLUS_EQUALS
    RETURN
    STRUCT
    TIMES_EQUALS

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracao_list
Rule 2     declaracao_list -> declaracao_list declaracao
Rule 3     declaracao_list -> declaracao
Rule 4     declaracao -> declaracao_variavel
Rule 5     declaracao -> declaracao_funcao
Rule 6     declaracao -> estrutura_controle
Rule 7     declaracao -> comentario
Rule 8     declaracao -> expressao SEMICOLON
Rule 9     declaracao_variavel -> tipo ID SEMICOLON
Rule 10    declaracao_variavel -> tipo ID EQUALS expressao SEMICOLON
Rule 11    tipo -> INT
Rule 12    tipo -> FLOAT
Rule 13    tipo -> DOUBLE
Rule 14    tipo -> CHAR
Rule 15    tipo -> BOOLEAN
Rule 16    tipo -> VOID
Rule 17    declaracao_funcao -> tipo ID LPAREN parametros RPAREN bloco
Rule 18    parametros -> parametro
Rule 19    parametros -> parametro COMMA parametros
Rule 20    parametros -> vazio
Rule 21    parametro -> tipo ID
Rule 22    parametro -> tipo ID LBRACKET RBRACKET
Rule 23    parametro -> tipo DOTS ID
Rule 24    bloco -> LBRACE declaracao_list RBRACE
Rule 25    estrutura_controle -> if
Rule 26    estrutura_controle -> while
Rule 27    estrutura_controle -> for
Rule 28    estrutura_controle -> switch
Rule 29    if -> IF LPAREN expressao RPAREN bloco
Rule 30    while -> WHILE LPAREN expressao RPAREN bloco
Rule 31    for -> FOR LPAREN expressao SEMICOLON expressao SEMICOLON expressao RPAREN bloco
Rule 32    switch -> SWITCH LPAREN expressao RPAREN LBRACE case_list RBRACE
Rule 33    case_list -> case_list case
Rule 34    case_list -> case
Rule 35    case -> CASE expressao COLON declaracao_list
Rule 36    case -> DEFAULT COLON declaracao_list
Rule 37    comentario -> COMMENT
Rule 38    comentario -> MULTI_COMMENT
Rule 39    expressao -> ID
Rule 40    expressao -> NUM_INT
Rule 41    expressao -> NUM_DEC
Rule 42    expressao -> TEXTO
Rule 43    expressao -> ID EQUALS expressao
Rule 44    expressao -> expressao PLUS expressao
Rule 45    expressao -> expressao MINUS expressao
Rule 46    expressao -> expressao TIMES expressao
Rule 47    expressao -> expressao DIV expressao
Rule 48    expressao -> expressao MOD expressao
Rule 49    expressao -> LPAREN expressao RPAREN
Rule 50    expressao -> PRINTLN LPAREN TEXTO RPAREN
Rule 51    vazio -> <empty>

Terminals, with rules where they appear

AND                  : 
AND_EQUALS           : 
ARROW                : 
BOOLEAN              : 15
BREAK                : 
CASE                 : 35
CHAR                 : 14
COLON                : 35 36
COMMA                : 19
COMMENT              : 37
CONTINUE             : 
DECREMENT            : 
DEFAULT              : 36
DIV                  : 47
DIV_EQUALS           : 
DOT                  : 
DOTS                 : 23
DOUBLE               : 13
ELSE                 : 
EQ                   : 
EQUALS               : 10 43
FLOAT                : 12
FOR                  : 31
GE                   : 
GT                   : 
ID                   : 9 10 17 21 22 23 39 43
IF                   : 29
INCREMENT            : 
INT                  : 11
LBRACE               : 24 32
LBRACKET             : 22
LE                   : 
LPAREN               : 17 29 30 31 32 49 50
LT                   : 
MINUS                : 45
MINUS_EQUALS         : 
MOD                  : 48
MOD_EQUALS           : 
MULTI_COMMENT        : 38
NE                   : 
NOT                  : 
NUM_DEC              : 41
NUM_INT              : 40
OR                   : 
OR_EQUALS            : 
PLUS                 : 44
PLUS_EQUALS          : 
PRINTLN              : 50
RBRACE               : 24 32
RBRACKET             : 22
RETURN               : 
RPAREN               : 17 29 30 31 32 49 50
SEMICOLON            : 8 9 10 31 31
STRUCT               : 
SWITCH               : 32
TEXTO                : 42 50
TIMES                : 46
TIMES_EQUALS         : 
VOID                 : 16
WHILE                : 30
error                : 

Nonterminals, with rules where they appear

bloco                : 17 29 30 31
case                 : 33 34
case_list            : 32 33
comentario           : 7
declaracao           : 2 3
declaracao_funcao    : 5
declaracao_list      : 1 2 24 35 36
declaracao_variavel  : 4
estrutura_controle   : 6
expressao            : 8 10 29 30 31 31 31 32 35 43 44 44 45 45 46 46 47 47 48 48 49
for                  : 27
if                   : 25
parametro            : 18 19
parametros           : 17 19
programa             : 0
switch               : 28
tipo                 : 9 10 17 21 22 23
vazio                : 20
while                : 26

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracao_list
    (2) declaracao_list -> . declaracao_list declaracao
    (3) declaracao_list -> . declaracao
    (4) declaracao -> . declaracao_variavel
    (5) declaracao -> . declaracao_funcao
    (6) declaracao -> . estrutura_controle
    (7) declaracao -> . comentario
    (8) declaracao -> . expressao SEMICOLON
    (9) declaracao_variavel -> . tipo ID SEMICOLON
    (10) declaracao_variavel -> . tipo ID EQUALS expressao SEMICOLON
    (17) declaracao_funcao -> . tipo ID LPAREN parametros RPAREN bloco
    (25) estrutura_controle -> . if
    (26) estrutura_controle -> . while
    (27) estrutura_controle -> . for
    (28) estrutura_controle -> . switch
    (37) comentario -> . COMMENT
    (38) comentario -> . MULTI_COMMENT
    (39) expressao -> . ID
    (40) expressao -> . NUM_INT
    (41) expressao -> . NUM_DEC
    (42) expressao -> . TEXTO
    (43) expressao -> . ID EQUALS expressao
    (44) expressao -> . expressao PLUS expressao
    (45) expressao -> . expressao MINUS expressao
    (46) expressao -> . expressao TIMES expressao
    (47) expressao -> . expressao DIV expressao
    (48) expressao -> . expressao MOD expressao
    (49) expressao -> . LPAREN expressao RPAREN
    (50) expressao -> . PRINTLN LPAREN TEXTO RPAREN
    (11) tipo -> . INT
    (12) tipo -> . FLOAT
    (13) tipo -> . DOUBLE
    (14) tipo -> . CHAR
    (15) tipo -> . BOOLEAN
    (16) tipo -> . VOID
    (29) if -> . IF LPAREN expressao RPAREN bloco
    (30) while -> . WHILE LPAREN expressao RPAREN bloco
    (31) for -> . FOR LPAREN expressao SEMICOLON expressao SEMICOLON expressao RPAREN bloco
    (32) switch -> . SWITCH LPAREN expressao RPAREN LBRACE case_list RBRACE

    COMMENT         shift and go to state 16
    MULTI_COMMENT   shift and go to state 17
    ID              shift and go to state 10
    NUM_INT         shift and go to state 18
    NUM_DEC         shift and go to state 19
    TEXTO           shift and go to state 20
    LPAREN          shift and go to state 11
    PRINTLN         shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    DOUBLE          shift and go to state 24
    CHAR            shift and go to state 25
    BOOLEAN         shift and go to state 26
    VOID            shift and go to state 27
    IF              shift and go to state 28
    WHILE           shift and go to state 29
    FOR             shift and go to state 30
    SWITCH          shift and go to state 31

    programa                       shift and go to state 1
    declaracao_list                shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variavel            shift and go to state 4
    declaracao_funcao              shift and go to state 5
    estrutura_controle             shift and go to state 6
    comentario                     shift and go to state 7
    expressao                      shift and go to state 8
    tipo                           shift and go to state 9
    if                             shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14
    switch                         shift and go to state 15

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracao_list .
    (2) declaracao_list -> declaracao_list . declaracao
    (4) declaracao -> . declaracao_variavel
    (5) declaracao -> . declaracao_funcao
    (6) declaracao -> . estrutura_controle
    (7) declaracao -> . comentario
    (8) declaracao -> . expressao SEMICOLON
    (9) declaracao_variavel -> . tipo ID SEMICOLON
    (10) declaracao_variavel -> . tipo ID EQUALS expressao SEMICOLON
    (17) declaracao_funcao -> . tipo ID LPAREN parametros RPAREN bloco
    (25) estrutura_controle -> . if
    (26) estrutura_controle -> . while
    (27) estrutura_controle -> . for
    (28) estrutura_controle -> . switch
    (37) comentario -> . COMMENT
    (38) comentario -> . MULTI_COMMENT
    (39) expressao -> . ID
    (40) expressao -> . NUM_INT
    (41) expressao -> . NUM_DEC
    (42) expressao -> . TEXTO
    (43) expressao -> . ID EQUALS expressao
    (44) expressao -> . expressao PLUS expressao
    (45) expressao -> . expressao MINUS expressao
    (46) expressao -> . expressao TIMES expressao
    (47) expressao -> . expressao DIV expressao
    (48) expressao -> . expressao MOD expressao
    (49) expressao -> . LPAREN expressao RPAREN
    (50) expressao -> . PRINTLN LPAREN TEXTO RPAREN
    (11) tipo -> . INT
    (12) tipo -> . FLOAT
    (13) tipo -> . DOUBLE
    (14) tipo -> . CHAR
    (15) tipo -> . BOOLEAN
    (16) tipo -> . VOID
    (29) if -> . IF LPAREN expressao RPAREN bloco
    (30) while -> . WHILE LPAREN expressao RPAREN bloco
    (31) for -> . FOR LPAREN expressao SEMICOLON expressao SEMICOLON expressao RPAREN bloco
    (32) switch -> . SWITCH LPAREN expressao RPAREN LBRACE case_list RBRACE

    $end            reduce using rule 1 (programa -> declaracao_list .)
    COMMENT         shift and go to state 16
    MULTI_COMMENT   shift and go to state 17
    ID              shift and go to state 10
    NUM_INT         shift and go to state 18
    NUM_DEC         shift and go to state 19
    TEXTO           shift and go to state 20
    LPAREN          shift and go to state 11
    PRINTLN         shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    DOUBLE          shift and go to state 24
    CHAR            shift and go to state 25
    BOOLEAN         shift and go to state 26
    VOID            shift and go to state 27
    IF              shift and go to state 28
    WHILE           shift and go to state 29
    FOR             shift and go to state 30
    SWITCH          shift and go to state 31

    declaracao                     shift and go to state 32
    declaracao_variavel            shift and go to state 4
    declaracao_funcao              shift and go to state 5
    estrutura_controle             shift and go to state 6
    comentario                     shift and go to state 7
    expressao                      shift and go to state 8
    tipo                           shift and go to state 9
    if                             shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14
    switch                         shift and go to state 15

state 3

    (3) declaracao_list -> declaracao .

    COMMENT         reduce using rule 3 (declaracao_list -> declaracao .)
    MULTI_COMMENT   reduce using rule 3 (declaracao_list -> declaracao .)
    ID              reduce using rule 3 (declaracao_list -> declaracao .)
    NUM_INT         reduce using rule 3 (declaracao_list -> declaracao .)
    NUM_DEC         reduce using rule 3 (declaracao_list -> declaracao .)
    TEXTO           reduce using rule 3 (declaracao_list -> declaracao .)
    LPAREN          reduce using rule 3 (declaracao_list -> declaracao .)
    PRINTLN         reduce using rule 3 (declaracao_list -> declaracao .)
    INT             reduce using rule 3 (declaracao_list -> declaracao .)
    FLOAT           reduce using rule 3 (declaracao_list -> declaracao .)
    DOUBLE          reduce using rule 3 (declaracao_list -> declaracao .)
    CHAR            reduce using rule 3 (declaracao_list -> declaracao .)
    BOOLEAN         reduce using rule 3 (declaracao_list -> declaracao .)
    VOID            reduce using rule 3 (declaracao_list -> declaracao .)
    IF              reduce using rule 3 (declaracao_list -> declaracao .)
    WHILE           reduce using rule 3 (declaracao_list -> declaracao .)
    FOR             reduce using rule 3 (declaracao_list -> declaracao .)
    SWITCH          reduce using rule 3 (declaracao_list -> declaracao .)
    $end            reduce using rule 3 (declaracao_list -> declaracao .)
    RBRACE          reduce using rule 3 (declaracao_list -> declaracao .)
    CASE            reduce using rule 3 (declaracao_list -> declaracao .)
    DEFAULT         reduce using rule 3 (declaracao_list -> declaracao .)


state 4

    (4) declaracao -> declaracao_variavel .

    COMMENT         reduce using rule 4 (declaracao -> declaracao_variavel .)
    MULTI_COMMENT   reduce using rule 4 (declaracao -> declaracao_variavel .)
    ID              reduce using rule 4 (declaracao -> declaracao_variavel .)
    NUM_INT         reduce using rule 4 (declaracao -> declaracao_variavel .)
    NUM_DEC         reduce using rule 4 (declaracao -> declaracao_variavel .)
    TEXTO           reduce using rule 4 (declaracao -> declaracao_variavel .)
    LPAREN          reduce using rule 4 (declaracao -> declaracao_variavel .)
    PRINTLN         reduce using rule 4 (declaracao -> declaracao_variavel .)
    INT             reduce using rule 4 (declaracao -> declaracao_variavel .)
    FLOAT           reduce using rule 4 (declaracao -> declaracao_variavel .)
    DOUBLE          reduce using rule 4 (declaracao -> declaracao_variavel .)
    CHAR            reduce using rule 4 (declaracao -> declaracao_variavel .)
    BOOLEAN         reduce using rule 4 (declaracao -> declaracao_variavel .)
    VOID            reduce using rule 4 (declaracao -> declaracao_variavel .)
    IF              reduce using rule 4 (declaracao -> declaracao_variavel .)
    WHILE           reduce using rule 4 (declaracao -> declaracao_variavel .)
    FOR             reduce using rule 4 (declaracao -> declaracao_variavel .)
    SWITCH          reduce using rule 4 (declaracao -> declaracao_variavel .)
    $end            reduce using rule 4 (declaracao -> declaracao_variavel .)
    RBRACE          reduce using rule 4 (declaracao -> declaracao_variavel .)
    CASE            reduce using rule 4 (declaracao -> declaracao_variavel .)
    DEFAULT         reduce using rule 4 (declaracao -> declaracao_variavel .)


state 5

    (5) declaracao -> declaracao_funcao .

    COMMENT         reduce using rule 5 (declaracao -> declaracao_funcao .)
    MULTI_COMMENT   reduce using rule 5 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 5 (declaracao -> declaracao_funcao .)
    NUM_INT         reduce using rule 5 (declaracao -> declaracao_funcao .)
    NUM_DEC         reduce using rule 5 (declaracao -> declaracao_funcao .)
    TEXTO           reduce using rule 5 (declaracao -> declaracao_funcao .)
    LPAREN          reduce using rule 5 (declaracao -> declaracao_funcao .)
    PRINTLN         reduce using rule 5 (declaracao -> declaracao_funcao .)
    INT             reduce using rule 5 (declaracao -> declaracao_funcao .)
    FLOAT           reduce using rule 5 (declaracao -> declaracao_funcao .)
    DOUBLE          reduce using rule 5 (declaracao -> declaracao_funcao .)
    CHAR            reduce using rule 5 (declaracao -> declaracao_funcao .)
    BOOLEAN         reduce using rule 5 (declaracao -> declaracao_funcao .)
    VOID            reduce using rule 5 (declaracao -> declaracao_funcao .)
    IF              reduce using rule 5 (declaracao -> declaracao_funcao .)
    WHILE           reduce using rule 5 (declaracao -> declaracao_funcao .)
    FOR             reduce using rule 5 (declaracao -> declaracao_funcao .)
    SWITCH          reduce using rule 5 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 5 (declaracao -> declaracao_funcao .)
    RBRACE          reduce using rule 5 (declaracao -> declaracao_funcao .)
    CASE            reduce using rule 5 (declaracao -> declaracao_funcao .)
    DEFAULT         reduce using rule 5 (declaracao -> declaracao_funcao .)


state 6

    (6) declaracao -> estrutura_controle .

    COMMENT         reduce using rule 6 (declaracao -> estrutura_controle .)
    MULTI_COMMENT   reduce using rule 6 (declaracao -> estrutura_controle .)
    ID              reduce using rule 6 (declaracao -> estrutura_controle .)
    NUM_INT         reduce using rule 6 (declaracao -> estrutura_controle .)
    NUM_DEC         reduce using rule 6 (declaracao -> estrutura_controle .)
    TEXTO           reduce using rule 6 (declaracao -> estrutura_controle .)
    LPAREN          reduce using rule 6 (declaracao -> estrutura_controle .)
    PRINTLN         reduce using rule 6 (declaracao -> estrutura_controle .)
    INT             reduce using rule 6 (declaracao -> estrutura_controle .)
    FLOAT           reduce using rule 6 (declaracao -> estrutura_controle .)
    DOUBLE          reduce using rule 6 (declaracao -> estrutura_controle .)
    CHAR            reduce using rule 6 (declaracao -> estrutura_controle .)
    BOOLEAN         reduce using rule 6 (declaracao -> estrutura_controle .)
    VOID            reduce using rule 6 (declaracao -> estrutura_controle .)
    IF              reduce using rule 6 (declaracao -> estrutura_controle .)
    WHILE           reduce using rule 6 (declaracao -> estrutura_controle .)
    FOR             reduce using rule 6 (declaracao -> estrutura_controle .)
    SWITCH          reduce using rule 6 (declaracao -> estrutura_controle .)
    $end            reduce using rule 6 (declaracao -> estrutura_controle .)
    RBRACE          reduce using rule 6 (declaracao -> estrutura_controle .)
    CASE            reduce using rule 6 (declaracao -> estrutura_controle .)
    DEFAULT         reduce using rule 6 (declaracao -> estrutura_controle .)


state 7

    (7) declaracao -> comentario .

    COMMENT         reduce using rule 7 (declaracao -> comentario .)
    MULTI_COMMENT   reduce using rule 7 (declaracao -> comentario .)
    ID              reduce using rule 7 (declaracao -> comentario .)
    NUM_INT         reduce using rule 7 (declaracao -> comentario .)
    NUM_DEC         reduce using rule 7 (declaracao -> comentario .)
    TEXTO           reduce using rule 7 (declaracao -> comentario .)
    LPAREN          reduce using rule 7 (declaracao -> comentario .)
    PRINTLN         reduce using rule 7 (declaracao -> comentario .)
    INT             reduce using rule 7 (declaracao -> comentario .)
    FLOAT           reduce using rule 7 (declaracao -> comentario .)
    DOUBLE          reduce using rule 7 (declaracao -> comentario .)
    CHAR            reduce using rule 7 (declaracao -> comentario .)
    BOOLEAN         reduce using rule 7 (declaracao -> comentario .)
    VOID            reduce using rule 7 (declaracao -> comentario .)
    IF              reduce using rule 7 (declaracao -> comentario .)
    WHILE           reduce using rule 7 (declaracao -> comentario .)
    FOR             reduce using rule 7 (declaracao -> comentario .)
    SWITCH          reduce using rule 7 (declaracao -> comentario .)
    $end            reduce using rule 7 (declaracao -> comentario .)
    RBRACE          reduce using rule 7 (declaracao -> comentario .)
    CASE            reduce using rule 7 (declaracao -> comentario .)
    DEFAULT         reduce using rule 7 (declaracao -> comentario .)


state 8

    (8) declaracao -> expressao . SEMICOLON
    (44) expressao -> expressao . PLUS expressao
    (45) expressao -> expressao . MINUS expressao
    (46) expressao -> expressao . TIMES expressao
    (47) expressao -> expressao . DIV expressao
    (48) expressao -> expressao . MOD expressao

    SEMICOLON       shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIV             shift and go to state 37
    MOD             shift and go to state 38


state 9
